<resources>
    <string name="app_name">Football Apps</string>

    <string name="substitutes">Substitutes</string>
    <string name="forward">Forward</string>
    <string name="midfield">Midfield</string>
    <string name="defense">Defense</string>
    <string name="goal_keeper">Goal Keeper</string>
    <string name="lineups">Lineups</string>
    <string name="shots">Shots</string>
    <string name="goals">Goals</string>
    <string name="vs">vs</string>
    <string name="favourite">Favourite</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="removed_from_favorite">Removed from favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_team_badge">Home Team Badge</string>
    <string name="away_team_badge">Away Team Badge</string>
    <string name="favorite">Favorite</string>
</resources>
