<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/scrollView"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".DetailActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

                <RelativeLayout
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="@dimen/height_144dp"
                    android:layout_weight="0.33"
                    android:gravity="center_vertical">

                    <FrameLayout
                        android:id="@+id/home_badge_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">

                        <ProgressBar
                            android:id="@+id/home_progress_bar"
                            android:layout_width="@dimen/size_72dp"
                            android:layout_height="@dimen/size_72dp" />

                        <ImageView
                            android:id="@+id/home_badge"
                            android:layout_width="@dimen/size_72dp"
                            android:layout_height="@dimen/size_72dp"
                            android:contentDescription="@string/home_team_badge" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/home_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/home_badge_frame"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_18dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="@dimen/height_144dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/match_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/home_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toStartOf="@id/vs"
                        android:textSize="@dimen/text_size_34dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/vs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="@dimen/margin_8dp"
                        android:layout_marginRight="@dimen/margin_8dp"
                        android:text="@string/vs"
                        android:textSize="@dimen/text_size_22dp" />

                    <TextView
                        android:id="@+id/away_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/vs"
                        android:textSize="@dimen/text_size_34dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="@dimen/height_144dp"
                    android:layout_weight="0.33"
                    android:gravity="center_vertical">

                    <FrameLayout
                        android:id="@+id/away_badge_frame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true">

                        <ProgressBar
                            android:id="@+id/away_progress_bar"
                            android:layout_width="@dimen/size_72dp"
                            android:layout_height="@dimen/size_72dp" />

                        <ImageView
                            android:id="@+id/away_badge"
                            android:layout_width="@dimen/size_72dp"
                            android:layout_height="@dimen/size_72dp"
                            android:contentDescription="@string/away_team_badge" />
                    </FrameLayout>

                    <TextView
                        android:id="@+id/away_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/away_badge_frame"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_18dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_4dp"
                android:stretchColumns="*">

                <TableRow>

                    <View
                        android:layout_height="@dimen/height_1dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/padding_4dp" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_8dp">

                    <TextView
                        android:id="@+id/home_goals"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/goals"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_goals"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:layout_marginBottom="@dimen/margin_4dp">

                    <TextView
                        android:id="@+id/home_shots"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/shots"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_shots"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow>

                    <View
                        android:layout_height="@dimen/height_1dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:padding="@dimen/padding_4dp" />
                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_4dp"
                    android:text="@string/lineups"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TableRow android:layout_marginTop="@dimen/margin_8dp">

                    <TextView
                        android:id="@+id/home_gk"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/goal_keeper"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_gk"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_8dp">

                    <TextView
                        android:id="@+id/home_def"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/defense"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_def"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_8dp">

                    <TextView
                        android:id="@+id/home_mid"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/midfield"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_mid"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_8dp">

                    <TextView
                        android:id="@+id/home_fwd"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/forward"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_fwd"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>

                <TableRow android:layout_marginTop="@dimen/margin_8dp">

                    <TextView
                        android:id="@+id/home_subs"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/substitutes"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/away_subs"
                        android:layout_width="@dimen/width_0dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>